--- a/JAGSport/JAGSport.csproj
+++ b/JAGSport/JAGSport.csproj
@@ -86,17 +86,29 @@
     <Compile Include="BackOffice.Designer.cs">
       <DependentUpon>BackOffice.cs</DependentUpon>
     </Compile>
-    <Compile Include="Deporte.cs">
+    <Compile Include="DeporteForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Deporte.Designer.cs">
-      <DependentUpon>Deporte.cs</DependentUpon>
+    <Compile Include="DeporteForm.Designer.cs">
+      <DependentUpon>DeporteForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Equipos.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Equipos.Designer.cs">
       <DependentUpon>Equipos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="eventoPasadoBackOffice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="eventoPasadoBackOffice.Designer.cs">
+      <DependentUpon>eventoPasadoBackOffice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="eventoSelct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="eventoSelct.Designer.cs">
+      <DependentUpon>eventoSelct.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -109,6 +121,12 @@
     </Compile>
     <Compile Include="FormVariable\Teams.Designer.cs">
       <DependentUpon>Teams.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Gestor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gestor.Designer.cs">
+      <DependentUpon>Gestor.cs</DependentUpon>
     </Compile>
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
@@ -152,17 +170,26 @@
     <EmbeddedResource Include="BackOffice.resx">
       <DependentUpon>BackOffice.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Deporte.resx">
-      <DependentUpon>Deporte.cs</DependentUpon>
+    <EmbeddedResource Include="DeporteForm.resx">
+      <DependentUpon>DeporteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Equipos.resx">
       <DependentUpon>Equipos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="eventoPasadoBackOffice.resx">
+      <DependentUpon>eventoPasadoBackOffice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="eventoSelct.resx">
+      <DependentUpon>eventoSelct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormVariable\Teams.resx">
       <DependentUpon>Teams.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gestor.resx">
+      <DependentUpon>Gestor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
@@ -243,6 +270,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\publi4.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Publicidad\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
